@@ -8,9 +8,18 @@ WSOURCES=		\
 	flat.html	\
 	site.xsl
 
+IMGS=			\
+	shadow.gif	\
+	brownbar.jpg	\
+	brownbarTop.jpg	\
+	title01.jpg	\
+	title02.jpg
+
 EXTRA_DIST =		\
 	$(PAGES)	\
-	$(WSOURCES)
+	$(WSOURCES)	\
+	$(IMGS)		\
+	sabayon.css
 
 all:
 
@@ -19,3 +28,6 @@ rebuild: $(PAGES)
 $(PAGES): $(WSOURCES)
 	-@(if [ -x /usr/bin/xsltproc ] ; then 				\
 	   /usr/bin/xsltproc -o index.html site.xsl flat.html ; fi)
+	-@(if [ -x /usr/bin/xmllint ] ; then				\
+	   echo Validating the resulting pages ;			\
+	   /usr/bin/xmllint --valid --noout $(PAGES)  ; fi)
