@@ -59,6 +59,8 @@ exit 0
 %defattr(-, root, root)
 
 %doc AUTHORS ChangeLog.gz NEWS README TODO ISSUES
+%doc doc/index.html doc/testing.html doc/helping.html doc/developing.html
+%doc doc/sabayon.css doc/*.jpg doc/*.gif
 %config /etc/gconf/2/local-defaults.path
 %config /etc/gconf/2/local-mandatory.path
 %config /etc/pam.d/sabayon
