@@ -1,3 +1,9 @@
+Mon Mar  7 16:08:23 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* doc/Makefile.am: added validation of output pages on rebuild
+	  and package them in the distrib
+	* sabayon.spec.in: add the web informations as documentation
+
 Mon Mar  7 15:45:12 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am configure.ac doc/Makefile.am: integrating the doc
